fix btc csv, load+tidy yahoo finance data

--- a/DataCheckpoint_Group052_FA23.ipynb
+++ b/DataCheckpoint_Group052_FA23.ipynb
@@ -110,19 +110,21 @@
     "  - Number of variables: 5\n",
     "- Dataset #2\n",
     "  - Dataset Name: Bitcoin USD Historical Data\n",
-    "  - Link to the dataset: https://finance.yahoo.com/quote/BTC-USD/history?period1=1420070400&period2=1698710400&interval=1mo&filter=history&frequency=1mo&includeAdjustedClose=true\n",
-    "  - Number of observations:\n",
-    "  - Number of variables:\n",
+    "  - Link to the dataset: https://finance.yahoo.com/quote/BTC-USD/history?period1=1420070400&period2=1698796800&interval=1mo&filter=history&frequency=1mo&includeAdjustedClose=true\n",
+    "  - Number of observations: 107\n",
+    "  - Number of variables: 7 \n",
     "- Dataset #3\n",
     "    - Dataset Name: Ethereum USD Historical Data\n",
     "  - Link to the dataset: https://finance.yahoo.com/quote/ETH-USD/history?period1=1510185600&period2=1698796800&interval=1mo&filter=history&frequency=1mo&includeAdjustedClose=true\n",
-    "  - Number of observations:\n",
-    "  - Number of variables:\n",
+    "  - Number of observations: 72\n",
+    "  - Number of variables: 7\n",
     "- Dataset #4\n",
     "  - Dataset Name:\n",
     "  - Link to the dataset:\n",
     "  - Number of observations:\n",
     "  - Number of variables:\n",
+    "  \n",
+    "To combine these datasets, we will take their intersection based on the dates.\n",
     "\n",
     "Now write 2 - 5 sentences describing each dataset here. Include a short description of the important variables in the dataset; what the metrics and datatypes are, what concepts they may be proxies for. Include information about how you would need to wrangle/clean/preprocess the dataset\n",
     "\n",
@@ -131,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,7 +703,433 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Dataset #2 (if you have more than one, use name instead of number here)"
+    "## Bitcoin Historical Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Adj Close</th>\n",
+       "      <th>Volume</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2015-01-01</td>\n",
+       "      <td>320.434998</td>\n",
+       "      <td>320.434998</td>\n",
+       "      <td>171.509995</td>\n",
+       "      <td>217.464005</td>\n",
+       "      <td>217.464005</td>\n",
+       "      <td>1098811912</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2015-02-01</td>\n",
+       "      <td>216.867004</td>\n",
+       "      <td>265.610992</td>\n",
+       "      <td>212.014999</td>\n",
+       "      <td>254.263000</td>\n",
+       "      <td>254.263000</td>\n",
+       "      <td>711518700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2015-03-01</td>\n",
+       "      <td>254.283005</td>\n",
+       "      <td>300.044006</td>\n",
+       "      <td>236.514999</td>\n",
+       "      <td>244.223999</td>\n",
+       "      <td>244.223999</td>\n",
+       "      <td>959098300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2015-04-01</td>\n",
+       "      <td>244.223007</td>\n",
+       "      <td>261.798004</td>\n",
+       "      <td>214.873993</td>\n",
+       "      <td>236.145004</td>\n",
+       "      <td>236.145004</td>\n",
+       "      <td>672338700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2015-05-01</td>\n",
+       "      <td>235.938995</td>\n",
+       "      <td>247.804001</td>\n",
+       "      <td>228.572998</td>\n",
+       "      <td>230.190002</td>\n",
+       "      <td>230.190002</td>\n",
+       "      <td>568122600</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Date        Open        High         Low       Close   Adj Close  \\\n",
+       "0  2015-01-01  320.434998  320.434998  171.509995  217.464005  217.464005   \n",
+       "1  2015-02-01  216.867004  265.610992  212.014999  254.263000  254.263000   \n",
+       "2  2015-03-01  254.283005  300.044006  236.514999  244.223999  244.223999   \n",
+       "3  2015-04-01  244.223007  261.798004  214.873993  236.145004  236.145004   \n",
+       "4  2015-05-01  235.938995  247.804001  228.572998  230.190002  230.190002   \n",
+       "\n",
+       "       Volume  \n",
+       "0  1098811912  \n",
+       "1   711518700  \n",
+       "2   959098300  \n",
+       "3   672338700  \n",
+       "4   568122600  "
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Load the data\n",
+    "bitcoin = pd.read_csv('BTC-USD.csv')\n",
+    "\n",
+    "# Check out the data\n",
+    "bitcoin.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check if there is any missing data\n",
+    "assert bitcoin[bitcoin.isnull().any(axis=1)].shape == (0,7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(107, 7)"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# What is the shape of this data set?\n",
+    "bitcoin.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>btc_date</th>\n",
+       "      <th>btc_open</th>\n",
+       "      <th>btc_high</th>\n",
+       "      <th>btc_low</th>\n",
+       "      <th>btc_close</th>\n",
+       "      <th>btc_adj close</th>\n",
+       "      <th>btc_volume</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2015-01-01</td>\n",
+       "      <td>320.434998</td>\n",
+       "      <td>320.434998</td>\n",
+       "      <td>171.509995</td>\n",
+       "      <td>217.464005</td>\n",
+       "      <td>217.464005</td>\n",
+       "      <td>1098811912</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2015-02-01</td>\n",
+       "      <td>216.867004</td>\n",
+       "      <td>265.610992</td>\n",
+       "      <td>212.014999</td>\n",
+       "      <td>254.263000</td>\n",
+       "      <td>254.263000</td>\n",
+       "      <td>711518700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2015-03-01</td>\n",
+       "      <td>254.283005</td>\n",
+       "      <td>300.044006</td>\n",
+       "      <td>236.514999</td>\n",
+       "      <td>244.223999</td>\n",
+       "      <td>244.223999</td>\n",
+       "      <td>959098300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2015-04-01</td>\n",
+       "      <td>244.223007</td>\n",
+       "      <td>261.798004</td>\n",
+       "      <td>214.873993</td>\n",
+       "      <td>236.145004</td>\n",
+       "      <td>236.145004</td>\n",
+       "      <td>672338700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2015-05-01</td>\n",
+       "      <td>235.938995</td>\n",
+       "      <td>247.804001</td>\n",
+       "      <td>228.572998</td>\n",
+       "      <td>230.190002</td>\n",
+       "      <td>230.190002</td>\n",
+       "      <td>568122600</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     btc_date    btc_open    btc_high     btc_low   btc_close  btc_adj close  \\\n",
+       "0  2015-01-01  320.434998  320.434998  171.509995  217.464005     217.464005   \n",
+       "1  2015-02-01  216.867004  265.610992  212.014999  254.263000     254.263000   \n",
+       "2  2015-03-01  254.283005  300.044006  236.514999  244.223999     244.223999   \n",
+       "3  2015-04-01  244.223007  261.798004  214.873993  236.145004     236.145004   \n",
+       "4  2015-05-01  235.938995  247.804001  228.572998  230.190002     230.190002   \n",
+       "\n",
+       "   btc_volume  \n",
+       "0  1098811912  \n",
+       "1   711518700  \n",
+       "2   959098300  \n",
+       "3   672338700  \n",
+       "4   568122600  "
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Standardize column headers to lower case and add btc prefix\n",
+    "\n",
+    "bitcoin.columns = bitcoin.columns.str.lower()\n",
+    "bitcoin = bitcoin.add_prefix(\"btc_\")\n",
+    "bitcoin.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ethereum Historical Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Adj Close</th>\n",
+       "      <th>Volume</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2017-12-01</td>\n",
+       "      <td>445.209015</td>\n",
+       "      <td>881.943970</td>\n",
+       "      <td>414.411011</td>\n",
+       "      <td>756.732971</td>\n",
+       "      <td>756.732971</td>\n",
+       "      <td>79862276544</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2018-01-01</td>\n",
+       "      <td>755.757019</td>\n",
+       "      <td>1432.880005</td>\n",
+       "      <td>742.004028</td>\n",
+       "      <td>1118.310059</td>\n",
+       "      <td>1118.310059</td>\n",
+       "      <td>163610220288</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2018-02-01</td>\n",
+       "      <td>1119.369995</td>\n",
+       "      <td>1161.349976</td>\n",
+       "      <td>574.419006</td>\n",
+       "      <td>855.198975</td>\n",
+       "      <td>855.198975</td>\n",
+       "      <td>83393441152</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2018-03-01</td>\n",
+       "      <td>856.012024</td>\n",
+       "      <td>880.302002</td>\n",
+       "      <td>368.632996</td>\n",
+       "      <td>396.457001</td>\n",
+       "      <td>396.457001</td>\n",
+       "      <td>53716179584</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2018-04-01</td>\n",
+       "      <td>397.253998</td>\n",
+       "      <td>708.875000</td>\n",
+       "      <td>363.804993</td>\n",
+       "      <td>669.924011</td>\n",
+       "      <td>669.924011</td>\n",
+       "      <td>60669918656</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Date         Open         High         Low        Close    Adj Close  \\\n",
+       "0  2017-12-01   445.209015   881.943970  414.411011   756.732971   756.732971   \n",
+       "1  2018-01-01   755.757019  1432.880005  742.004028  1118.310059  1118.310059   \n",
+       "2  2018-02-01  1119.369995  1161.349976  574.419006   855.198975   855.198975   \n",
+       "3  2018-03-01   856.012024   880.302002  368.632996   396.457001   396.457001   \n",
+       "4  2018-04-01   397.253998   708.875000  363.804993   669.924011   669.924011   \n",
+       "\n",
+       "         Volume  \n",
+       "0   79862276544  \n",
+       "1  163610220288  \n",
+       "2   83393441152  \n",
+       "3   53716179584  \n",
+       "4   60669918656  "
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Load the data\n",
+    "ethereum = pd.read_csv('ETH-USD.csv')\n",
+    "\n",
+    "# Check out the data\n",
+    "ethereum.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check if there is any missing data\n",
+    "assert ethereum[ethereum.isnull().any(axis=1)].shape == (0,7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(72, 7)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# What is the shape of this data set?\n",
+    "ethereum.shape"
    ]
   },
   {
@@ -710,8 +1138,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## YOUR CODE TO LOAD/CLEAN/TIDY/WRANGLE THE DATA GOES HERE\n",
-    "## FEEL FREE TO ADD MULTIPLE CELLS PER SECTION"
+    "# Standardize column headers to lower case and add eth prefix\n",
+    "\n",
+    "ethereum.columns = bitcoin.columns.str.lower()\n",
+    "bitcoin = bitcoin.add_prefix(\"btc_\")\n",
+    "bitcoin.head()"
    ]
   },
   {
