fix steam gpu, finish data summaries

--- a/DataCheckpoint_Group052_FA23.ipynb
+++ b/DataCheckpoint_Group052_FA23.ipynb
@@ -106,18 +106,27 @@
     "- Dataset #1\n",
     "  - Dataset Name: Steam Hardware Surveys\n",
     "  - Link to the dataset: https://raw.githubusercontent.com/jdegene/steamHWsurvey/master/shs.csv\n",
-    "  - Number of observations: 12937\n",
+    "  - Number of observations: 9543\n",
     "  - Number of variables: 5\n",
+    "  \n",
+    "Each observation in this data set has a date for the date of the survey response, category for the type of hardware the entry is for, the name of the particular product, the change in popularity from the previous month (negative values indicate less popularity, positive more popularity), and the percentage of total items in the category that the particular product makes up. The date, category, and name are strings, and the change and percentage are numbers. This data will help us to understand the usage of particular GPU products over time. To wrangle and clean the dataset, we will need to filter the data by dates and the hardware category we are interested in, then check for and drop rows with missing data.\n",
+    "\n",
     "- Dataset #2\n",
     "  - Dataset Name: Bitcoin USD Historical Data\n",
     "  - Link to the dataset: https://finance.yahoo.com/quote/BTC-USD/history?period1=1420070400&period2=1698796800&interval=1mo&filter=history&frequency=1mo&includeAdjustedClose=true\n",
     "  - Number of observations: 107\n",
     "  - Number of variables: 7 \n",
+    "  \n",
+    "Each observation in this data set has a date to indicate what month/year the data corresponds to, the opening price, the highest price during that month, the lowest price during that month, the closing price for that month, an adjusted closing price for splits/dividend/capital gain distributions, and volume of stocks traded during that month. This data will help us to understand how bitcoin prices fluctuate overtime. We are able to preselect the dates we are interested in when downloading the csv for the data, so to wrangle and clean the dataset, we only need to check for missing data, and standardize the column headers to make it easier to combine datasets later on.\n",
+    "\n",
     "- Dataset #3\n",
     "    - Dataset Name: Ethereum USD Historical Data\n",
     "  - Link to the dataset: https://finance.yahoo.com/quote/ETH-USD/history?period1=1510185600&period2=1698796800&interval=1mo&filter=history&frequency=1mo&includeAdjustedClose=true\n",
     "  - Number of observations: 72\n",
     "  - Number of variables: 7\n",
+    "  \n",
+    "Same as for bitcoin, each observation in this data set has a date to indicate what month/year the data corresponds to, the opening price, the highest price during that month, the lowest price during that month, the closing price for that month, an adjusted closing price for splits/dividend/capital gain distributions, and volume of stocks traded during that month. This data will serve as another proxy to help us to understand how bitcoin prices fluctuate overtime. We are able to preselect the dates we are interested in when downloading the csv for the data, so to wrangle and clean the dataset, we only need to check for missing data, and standardize the column headers to make it easier to combine datasets later on (being able to distinguish between BTC vs ETH data).\n",
+    "\n",
     "- Dataset #4\n",
     "  - Dataset Name:\n",
     "  - Link to the dataset:\n",
@@ -149,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +243,7 @@
        "4  2008-11-01  AMD CPU Speeds  2.3 Ghz to 2.69 Ghz  0.0001      0.0727"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +343,7 @@
        "4  2015-01-01  Free Hard Drive Space  750 GB to 999 GB  0.0020      0.0879"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +383,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -394,26 +403,24 @@
       "text/plain": [
        "category\n",
        "Video Card Description    9599\n",
-       "Physical CPUs             2327\n",
-       "Intel CPU Speeds          1067\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# We only care about CPU/GPU data\n",
-    "steam_cpu_gpu = steam_dates[steam_dates['category'].isin(['Video Card Description', 'Physical CPUs', 'Intel CPU Speeds'])]\n",
+    "# We only care about GPU data\n",
+    "steam_cpu_gpu = steam_dates[steam_dates['category'] == 'Video Card Description']\n",
     "\n",
     "steam_cpu_gpu['category'].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +505,7 @@
        "15699  2019-01-01  Video Card Description  NaN  0.0001      0.0024"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -543,44 +550,44 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <th>292</th>\n",
        "      <td>2015-01-01</td>\n",
-       "      <td>Intel CPU Speeds</td>\n",
-       "      <td>1.4 Ghz to 1.49 Ghz</td>\n",
-       "      <td>0.0002</td>\n",
-       "      <td>0.0065</td>\n",
+       "      <td>Video Card Description</td>\n",
+       "      <td>AMD Radeon HD 4350</td>\n",
+       "      <td>0.0025</td>\n",
+       "      <td>0.0025</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <th>293</th>\n",
        "      <td>2015-01-01</td>\n",
-       "      <td>Intel CPU Speeds</td>\n",
-       "      <td>1.5 Ghz to 1.69 Ghz</td>\n",
-       "      <td>0.0001</td>\n",
-       "      <td>0.0182</td>\n",
+       "      <td>Video Card Description</td>\n",
+       "      <td>AMD Radeon HD 4650</td>\n",
+       "      <td>0.0029</td>\n",
+       "      <td>0.0029</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
+       "      <th>294</th>\n",
        "      <td>2015-01-01</td>\n",
-       "      <td>Intel CPU Speeds</td>\n",
-       "      <td>1.7 Ghz to 1.99 Ghz</td>\n",
-       "      <td>-0.0005</td>\n",
-       "      <td>0.0480</td>\n",
+       "      <td>Video Card Description</td>\n",
+       "      <td>AMD Radeon HD 4670</td>\n",
+       "      <td>0.0024</td>\n",
+       "      <td>0.0024</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
+       "      <th>295</th>\n",
        "      <td>2015-01-01</td>\n",
-       "      <td>Intel CPU Speeds</td>\n",
-       "      <td>2.0 Ghz to 2.29 Ghz</td>\n",
-       "      <td>-0.0025</td>\n",
-       "      <td>0.0963</td>\n",
+       "      <td>Video Card Description</td>\n",
+       "      <td>AMD Radeon HD 4850</td>\n",
+       "      <td>0.0026</td>\n",
+       "      <td>0.0026</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
+       "      <th>296</th>\n",
        "      <td>2015-01-01</td>\n",
-       "      <td>Intel CPU Speeds</td>\n",
-       "      <td>2.3 Ghz to 2.69 Ghz</td>\n",
-       "      <td>-0.0002</td>\n",
-       "      <td>0.2202</td>\n",
+       "      <td>Video Card Description</td>\n",
+       "      <td>AMD Radeon HD 4870</td>\n",
+       "      <td>0.0016</td>\n",
+       "      <td>0.0016</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -632,16 +639,16 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>12937 rows × 5 columns</p>\n",
+       "<p>9543 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "             date                category                                name  \\\n",
-       "7      2015-01-01        Intel CPU Speeds                 1.4 Ghz to 1.49 Ghz   \n",
-       "8      2015-01-01        Intel CPU Speeds                 1.5 Ghz to 1.69 Ghz   \n",
-       "9      2015-01-01        Intel CPU Speeds                 1.7 Ghz to 1.99 Ghz   \n",
-       "10     2015-01-01        Intel CPU Speeds                 2.0 Ghz to 2.29 Ghz   \n",
-       "11     2015-01-01        Intel CPU Speeds                 2.3 Ghz to 2.69 Ghz   \n",
+       "292    2015-01-01  Video Card Description                  AMD Radeon HD 4350   \n",
+       "293    2015-01-01  Video Card Description                  AMD Radeon HD 4650   \n",
+       "294    2015-01-01  Video Card Description                  AMD Radeon HD 4670   \n",
+       "295    2015-01-01  Video Card Description                  AMD Radeon HD 4850   \n",
+       "296    2015-01-01  Video Card Description                  AMD Radeon HD 4870   \n",
        "...           ...                     ...                                 ...   \n",
        "34708  2023-10-01  Video Card Description  NVIDIA GeForce RTX 4070 Laptop GPU   \n",
        "34709  2023-10-01  Video Card Description          NVIDIA GeForce RTX 4070 Ti   \n",
@@ -650,11 +657,11 @@
        "34712  2023-10-01  Video Card Description                               Other   \n",
        "\n",
        "       change  percentage  \n",
-       "7      0.0002      0.0065  \n",
-       "8      0.0001      0.0182  \n",
-       "9     -0.0005      0.0480  \n",
-       "10    -0.0025      0.0963  \n",
-       "11    -0.0002      0.2202  \n",
+       "292    0.0025      0.0025  \n",
+       "293    0.0029      0.0029  \n",
+       "294    0.0024      0.0024  \n",
+       "295    0.0026      0.0026  \n",
+       "296    0.0016      0.0016  \n",
        "...       ...         ...  \n",
        "34708 -0.0003      0.0016  \n",
        "34709  0.0005      0.0090  \n",
@@ -662,10 +669,10 @@
        "34711 -0.0010      0.0061  \n",
        "34712 -0.0067      0.0956  \n",
        "\n",
-       "[12937 rows x 5 columns]"
+       "[9543 rows x 5 columns]"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -680,16 +687,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(12937, 5)"
+       "(9543, 5)"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -984,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1088,7 +1095,7 @@
        "4   60669918656  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1103,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1113,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1122,7 +1129,7 @@
        "(72, 7)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1134,15 +1141,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>eth_date</th>\n",
+       "      <th>eth_open</th>\n",
+       "      <th>eth_high</th>\n",
+       "      <th>eth_low</th>\n",
+       "      <th>eth_close</th>\n",
+       "      <th>eth_adj close</th>\n",
+       "      <th>eth_volume</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2017-12-01</td>\n",
+       "      <td>445.209015</td>\n",
+       "      <td>881.943970</td>\n",
+       "      <td>414.411011</td>\n",
+       "      <td>756.732971</td>\n",
+       "      <td>756.732971</td>\n",
+       "      <td>79862276544</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2018-01-01</td>\n",
+       "      <td>755.757019</td>\n",
+       "      <td>1432.880005</td>\n",
+       "      <td>742.004028</td>\n",
+       "      <td>1118.310059</td>\n",
+       "      <td>1118.310059</td>\n",
+       "      <td>163610220288</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2018-02-01</td>\n",
+       "      <td>1119.369995</td>\n",
+       "      <td>1161.349976</td>\n",
+       "      <td>574.419006</td>\n",
+       "      <td>855.198975</td>\n",
+       "      <td>855.198975</td>\n",
+       "      <td>83393441152</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2018-03-01</td>\n",
+       "      <td>856.012024</td>\n",
+       "      <td>880.302002</td>\n",
+       "      <td>368.632996</td>\n",
+       "      <td>396.457001</td>\n",
+       "      <td>396.457001</td>\n",
+       "      <td>53716179584</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2018-04-01</td>\n",
+       "      <td>397.253998</td>\n",
+       "      <td>708.875000</td>\n",
+       "      <td>363.804993</td>\n",
+       "      <td>669.924011</td>\n",
+       "      <td>669.924011</td>\n",
+       "      <td>60669918656</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     eth_date     eth_open     eth_high     eth_low    eth_close  \\\n",
+       "0  2017-12-01   445.209015   881.943970  414.411011   756.732971   \n",
+       "1  2018-01-01   755.757019  1432.880005  742.004028  1118.310059   \n",
+       "2  2018-02-01  1119.369995  1161.349976  574.419006   855.198975   \n",
+       "3  2018-03-01   856.012024   880.302002  368.632996   396.457001   \n",
+       "4  2018-04-01   397.253998   708.875000  363.804993   669.924011   \n",
+       "\n",
+       "   eth_adj close    eth_volume  \n",
+       "0     756.732971   79862276544  \n",
+       "1    1118.310059  163610220288  \n",
+       "2     855.198975   83393441152  \n",
+       "3     396.457001   53716179584  \n",
+       "4     669.924011   60669918656  "
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Standardize column headers to lower case and add eth prefix\n",
     "\n",
-    "ethereum.columns = bitcoin.columns.str.lower()\n",
-    "bitcoin = bitcoin.add_prefix(\"btc_\")\n",
-    "bitcoin.head()"
+    "ethereum.columns = ethereum.columns.str.lower()\n",
+    "ethereum = ethereum.add_prefix(\"eth_\")\n",
+    "ethereum.head()"
    ]
   },
   {
